--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "scribe"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+description = "Basic Logger for Rust"
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
